2003-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-getopt.c: Include <kpathsea/getopt.h>, not "getopt.h".

2003-02-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-alloc.h (DECLARE_OCTAVE_ALLOCATOR): Handle systems with or
	without placement delete.

	* CMatrix.cc (ComplexMatrix::all_elements_are_real): Don't lose -0
	imaginary parts.

	* lo-ieee.h (lo_ieee_signbit): New macro.

2003-02-18  David Bateman <dbateman@free.fr>

	* dMatrix.cc (Matrix::inverse, Matrix::determinant, Matrix::solve):
	Use Lapack instead of Linpack.
	* Cmatrix.cc (ComplexMatrix::inverse, ComplexMatrix::determinant,
	ComplexMatrix::solve): Likewise.

	* dMatrix.cc (Matrix::determinant, Matrix::inverse): New arg,
	calc_cond.  If 0, skip condition number calculation.
	* CMatrix.cc (ComplexMatrix::determinant, ComplexMatrix::inverse):
	Likewise.

	* CmplxLU.cc (ComplexLU::ComplexLU): Allow non-square matrices.
	* dbleLU.cc (LU::LU): Likewise.
	* base-lu.cc (base_lu::L), base_lu::U, base_lu::P): Likewise.

2002-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>
  
  	* octave.test/arith/prod-4.m, octave.test/arith/sum-4.m:

2003-02-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (Array2<T>::index): Fix thinko.
	Additional compatibility fix.

2003-02-13  Arno Klaassen  <arno@scito.com>
 
        * Array2-idx.h, Array2.cc, Array2.h, Array3.cc, Array3.h,
	ArrayN.cc, ArrayN.h, DiagArray2.cc, DiagArray2.h, MDiagArray2.h:
	Sprinkle with Array<T>:: as necessary for gcc 3.4.
 
2003-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (Array2<T>::index (idx_vector&, int, const T&)):
	Compatibility fix.

2003-02-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CColVector.cc (ComplexColumnVector::extract_n): New function.
	* CRowVector.cc (ComplexRowVector::extract_n): Likewise.
	* CMatrix.cc (ComplexMatrix::extract_n): Likewise.
	* dColVector.cc (ColumnVector::extract_n): Likewise.
	* dRowVector.cc (RowVector::extract_n): Likewise.
	* dMatrix.cc (Matrix::extract_n): Likewise.
